# newsletter

./: .gitignore  Cargo.toml  README.md  feeds.yaml
.github/workflows/: rust.yml  send-newsletter.yml
src/: main.rs
src/assets/: feeds.yaml
src/custom_rss/: mod.rs
src/debug/: mod.rs
src/feeds/: mod.rs
src/mail/: build.rs  mod.rs
src/mail/assets/: main.css
