[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dotenv = "0.15.0"

