[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dotenv = "0.15.0"
reqwest = "0.11.14"
rss = "2.0.2"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
chrono = "0.4.23"
build_html = "2.2.0"

